tests/ui/too_many_optionals.stderr
error: no rules expected `3usize`
  --> tests/ui/too_many_optionals.rs:21:37
   |
 8 | bobtail::define! {
   | ---------------- when calling this macro
...
21 |     sset!(pico, (0,0), 1u8, 2usize, 3usize).unwrap();
   |                                     ^^^^^^ no rules expected this token in macro call
   |
   = note: while trying to match sequence end
